--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -17,6 +17,9 @@
     <div class="container">
         <div class="navbar-header">
             <a th:href="@{/}" class="navbar-brand">TechJobs</a>
+            <a th:href="@{/list}" class="navbar-brand">List Jobs</a>
+            <a th:href="@{/search}" class="navbar-brand">Search Jobs</a>
+            <a th:href="@{/add}" class="navbar-brand">Add Jobs</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
