corrected view paths

--- a/src/main/resources/templates/view.html
+++ b/src/main/resources/templates/view.html
@@ -15,7 +15,7 @@
     </p>
     <p> Skills:
         <ul>
-            <li th:each="skill : ${job.skills}">
+            <li th:each="skill : ${job.getSkills()}">
                 <a th:href="@{'/skills/view/' + ${skill.id}}" th:text="${skill.name}"></a>
             </li>
         </ul>
